src/test/ui/issues/issue-11771.stderr
error[E0277]: cannot add `()` to `{integer}`
  --> $DIR/issue-11771.rs:3:7
   |
LL |     1 +
   |       ^ no implementation for `{integer} + ()`
   |
   = help: the trait `Add<()>` is not implemented for `{integer}`
   = help: the following implementations were found:
             <&'a f32 as Add<f32>>
             <&'a f64 as Add<f64>>
             <&'a i128 as Add<i128>>
             <&'a i16 as Add<i16>>
           and 48 others

error[E0277]: cannot add `()` to `{integer}`
  --> $DIR/issue-11771.rs:8:7
   |
LL |     1 +
   |       ^ no implementation for `{integer} + ()`
   |
   = help: the trait `Add<()>` is not implemented for `{integer}`
   = help: the following implementations were found:
             <&'a f32 as Add<f32>>
             <&'a f64 as Add<f64>>
             <&'a i128 as Add<i128>>
             <&'a i16 as Add<i16>>
           and 48 others

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
